Funcion-Pelicula terminado ome gonorrea ome

--- a/src/main/webapp/src/modules/criticos/criticos.create.html
+++ b/src/main/webapp/src/modules/criticos/criticos.create.html
@@ -25,7 +25,7 @@
                 </div>
                 <label for="festival" class="col-md-2 control-label">Festival</label>
                 <div class="col-md-10" style="margin-bottom: 10px">
-                    <select id="festival" name="festival" ng-options="rc.nombre for rc in festivales track by rc.id" class="form-control" type="text" ng-model="currentRecord.pelicula" ></select>
+                    <select id="festival" name="festival" ng-options="rc.nombre for rc in festivales track by rc.id" class="form-control" type="text" ng-model="currentRecord.festival" ></select>
                 </div>
             <button type="button" ui-sref='criticosList'>Cancel</button>
             <button type="submit" >Save</button>    
