--- a/src/main/webapp/src/modules/funciones/funciones.create.html
+++ b/src/main/webapp/src/modules/funciones/funciones.create.html
@@ -27,7 +27,7 @@
             </div>
             <label for="festival" class="col-md-2 control-label">Película</label>
                 <div class="col-md-10" style="margin-bottom: 10px">
-                    <select id="pelicula" name="pelicula" ng-options="rc.nombre for rc in peliculas track by rc.id" class="form-control" type="text" ng-model="currentRecord.festival" ></select>
+                    <select id="pelicula" name="pelicula" ng-options="rc.nombre for rc in peliculas track by rc.id" class="form-control" type="text" ng-model="currentRecord.pelicula" ></select>
                 </div>
             <button type="button" ui-sref='funcionesList'>Cancel</button>   
             <button type="submit" >Save</button>
