Diseño final ciclo 2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,22 +75,7 @@
                     </ul>
                     <ul class="nav navbar-nav" style="margin-left: 0">
                         <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Funciones</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="funcionesCreate">Crear función</a></li>    
-                                <li><a ui-sref="funcionesList">Lista funciones</a></li>
-                            </ul>
-                        </li> 
-                    </ul>
-                    <ul class="nav navbar-nav" style="margin-left: 0">
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"><font color="white">Peliculas</font>
-                            <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a ui-sref="peliculasCreate">Crear pelíula</a></li>    
-                                <li><a ui-sref="peliculasList">Lista películas</a></li>
-                            </ul>
+                            <a ui-sref="peliculasList" style="color:white">Películas</a>
                         </li> 
                     </ul>
                     <ul class="nav navbar-nav" style="margin-left: 0">
