--- a/src/main/webapp/src/modules/festivales/festivales.instance.html
+++ b/src/main/webapp/src/modules/festivales/festivales.instance.html
@@ -9,6 +9,7 @@
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="criticosList">Criticos</a></li>
                                 <li><a ui-sref="festivalTeatrosList">Teatros</a></li>
+                                <li><a ui-sref="festivalPeliculasList">Películas</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
