Correcciones varios - Post reunion con Rubby

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -83,6 +83,11 @@
                             <a ui-sref="teatrosList" style="color: white">Teatros</a>
                         </li> 
                     </ul>
+                    <ul class="nav navbar-nav" style="margin-left: 0">
+                        <li class="dropdown">
+                            <a ui-sref="criticosList" style="color: white">Críticos</a>
+                        </li> 
+                    </ul>
                 </div> 
             </div>
         </nav>
