--- a/src/main/webapp/src/modules/festivales/festivales.instance.html
+++ b/src/main/webapp/src/modules/festivales/festivales.instance.html
@@ -7,7 +7,7 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="criticosList">Criticos</a></li>
+                                <li><a ui-sref="festivalesCriticosList">Criticos</a></li>
                                 <li><a ui-sref="festivalTeatrosList">Teatros</a></li>
                                 <li><a ui-sref="festivalPeliculasList">Películas</a></li>
                             </ul>
