--- a/src/main/webapp/src/modules/boletas/boletas.listnoedit.html
+++ b/src/main/webapp/src/modules/boletas/boletas.listnoedit.html
@@ -20,4 +20,5 @@
             </tr>
         </tbody>
     </table>
+    <button class="btn btn-default" ui-sref="boletaComprar">Comprar boleta</button>
 </div>
