--- a/FestivalCine-web/src/main/webapp/index.html
+++ b/FestivalCine-web/src/main/webapp/index.html
@@ -171,7 +171,7 @@
         </div>
     </section>
     
-    <a  name="contact"></a>
+    <a  name="contact" style="margin-top: 2000000px"></a>
     <div class="banner">
 
         <div class="container">
