--- a/FestivalCine-web/src/main/webapp/src/modules/salas/salas.listnoedit.html
+++ b/FestivalCine-web/src/main/webapp/src/modules/salas/salas.listnoedit.html
@@ -4,7 +4,7 @@
     <table class="table table-striped" class="col-md-4">
         <thead>
             <tr>
-                <th>Num</th>        
+                <th>Numero</th>        
                
             </tr>
         </thead>
