Festival REST corregido

--- a/FestivalCine-web/src/main/webapp/index.html
+++ b/FestivalCine-web/src/main/webapp/index.html
@@ -68,7 +68,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="http://localhost:8080/FestivalCine-web/#/cines">SourceTeam</a>
+                <a class="navbar-brand topnav" href="#">SourceTeam</a>
             </div>
             
             <!-- Collect the nav links, forms, and other content for toggling -->
